<resources>
    <string name="app_name">Mera Allah</string>
    <string name="menu">Main Menu</string>
    <string name="_Allahname">Asma Ul Husna</string>
    <string name="supplications">Supplications</string>
    <string name="namaz">Salah</string>


    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>

    <!--TextViews-->
    <string name="nameOfAllah">اَللَّه</string>
    <string name="bismiAllah">بِسْمِ اللَّهِ الرَّحْمَٰنِ الرَّحِيمِ</string>
    <string name="meaningOfAyat">In the name of Allah,the Entirely Merciful, the Especially Merciful. [1:1]</string>

    <!--Buttons-->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="play_audio">play</string>
    <string name="reference">Reference:</string>
    <string name="tarjuma">ترجمه:</string>
    <string name="process_image">PROCESS IMAGE</string>


    <string name="urdu">Urdu</string>
    <string name="english">English</string>
    <string name="transliteration">Transliteration:</string>
    <string name="tasbeeh">Tasbeeh</string>
    <string name="tasbeehCounter">Tasbeeh Counter</string>
    <string name="tasbeeh_transliteration">Transliteration: La-ilaha-ill’Allahu wahdahu-la-sharikalah, Lahul-mulku wa lahul-hamdu wa huwa ala-kulli-shay’in-Qadir, Subhana rabbiye’laliyyi’l-a’le’l-vehhâb</string>
    <string name="tasbeeh_translation">Translation: There is no god but Allah alone, He has no partners, to Him belongs dominion and to Him belongs praises, and He has power over all things.</string>
    <string name="tasbeeh_dua">لاَأِلَاهَ اِلاَّ اللّهُ وَحْدَهُ لاَ شَرِيكَ لَهُ لَهُ الْمُلْكُ وَلَهُ الْحَمْدُ وَهُوَ عَلىَ كُلِّ شَيْءِِقَدِيرُ</string>


    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="shahadat">Shahada</string>
    <string name="copy_button">Copy Button</string>
    <string name="silent_phone">Silent Phone</string>
    <string name="search_title">Search Dua</string>
    <string name="hajj">Hajj</string>


    <string name="question_demo">What is the Name of Last Prophet?</string>
    <string name="points">Points</string>
    <string name="questions">Questions</string>
    <string name="_zeroPoints">0</string>
    <string name="radio_button">Radio Button</string>
    <string name="confirm">Confirm</string>
    <string name="changeToNext">Next</string>
    <string name="changeToFinish">Finish</string>
    <string name="changeToConfirm">Confirm</string>
    <string name="mainMenu">Main Menu</string>
    <string name="playAgain">Play Again</string>
    <string name="highScore">High Score</string>
    <string name="yourScore">Your Score</string>
    <string name="wrong">Wrong</string>
    <string name="correct">Correct</string>
    <string name="quizOver">Quiz Over</string>
    <string name="txtClose">X</string>
    <string name="quiz_icon">Quiz Icon</string>
    <string name="calculate_zakkat">Calculate Zakkat</string>
    <string name="hint">Enter your amount</string>
    <string name="textview_zakat">You Have to pay Zakkat: </string>
    <string name="find_zakkat">Find Zakkat</string>
    <string name="_zero">0</string>
    <string name="show_answers">Show Answers</string>
    <string name="answers">Answers</string>
    <string name="location">Location</string>
    <string name="salah_times">Salah Times</string>
    <string name="salah_times_methods">Calculation Methods</string>
    <string name="select_country">Select Country</string>
    <string name="find_Rates">Find Rates</string>
    <string name="zakkat">Zakkat</string>
    <string name="quran_verse">Quran Verse</string>
    <string name="hadith">Hadith of the Day</string>
    <string name="ok">Ok</string>
    <string name="hijri_calender">Hijri Calender</string>
    <string name="hijri_calender_info">Hijri Calender Infromation</string>
    <string name="al_quran_with_english_translation">Al Quran With English Translation</string>
    <string name="al_quran">Al Quran</string>
    <string name="al_quran_with_urdu_translation">Al Quran With Urdu Translation</string>
    <string name="janaza">Janaza</string>

    <string name="kalimas">Six Kalimas</string>
    <string name="janaza_Detail">Janaza Detail</string>
    <string name="surah">Surah List</string>
    <string name="note">Do you want to Download Holy Quran of 15 Lines/Per Page ?</string>
    <string name="quranEPak">Quran E Pak</string>
    <string name="qaida">Qaida</string>
    <string name="message">Do you want to download Norani Qaida ?</string>
    <string name="newBorn">Islamic Practices for Newborn Child</string>
    <string name="enter_cash">Enter Cash</string>
    <string name="calculate">Calculate</string>
    <string name="eligible">Eligible</string>
    <string name="your_amount">Your Amount</string>
    <string name="quiz_result">Quiz Result</string>
    <string name="search_menu">Search Menu</string>
    <string name="prophet_names">Asma Ul Rasool</string>
    <string name="allah_names">Amsa Ul Husna</string>
    <string name="islamic_videos">Islamic Videos</string>
    <string name="date">Date</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="holy_quran">Holy Quran</string>
    <string name="quran_setting">Quran Setting</string>
    <string name="tasmia_translation_urdu">شروع الله کے نام سے جو بڑا مہربان نہایت رحم والا ہے</string>
    <string name="tasmia_translation_english">In the name of Allah Most Gracious Most Merciful.</string>
    <string name="silent_note">By Setting Up Prayer times your phone will go to silent mode when clock reaches that time. And will remain silent for next 20 minutes. After that the app will bring phone back to  normal mode.</string>


</resources>