<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    android:fitsSystemWindows="true"
    tools:context=".ui.QuizActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
        android:background="@color/card_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewQuestionCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/catamaran_medium"
            android:textColor="@color/gold"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="9/20" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/catamaran_medium"
            android:text="@string/questions"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewQuestionCount" />


        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/catamaran_medium"
            android:text="@string/_zero"
            android:textColor="@color/gold"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/catamaran_medium"
            android:text="@string/points"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/score" />

        <ticker.views.com.ticker.widgets.circular.timer.view.CircularView
            android:id="@+id/circular_view_with_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/catamaran_medium"
            android:freezesText="true"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:m_arc_stroke_color="@color/dark_blue"
            app:m_cicle_stroke_width="12"
            app:m_circle_radius="35"
            app:m_circle_stroke_color="@color/gold" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_120sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:background="@drawable/question_background"
        android:elevation="@dimen/_5sdp"
        android:fontFamily="@font/catamaran_medium"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:text="@string/question_demo"
        android:textColor="@android:color/black"
        app:autoSizeMaxTextSize="@dimen/_15sdp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />


    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/radio_button1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:button="@null"
            android:fontFamily="@font/catamaran_medium"
            android:freezesText="true"
            android:gravity="center"
            android:text="@string/radio_button"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp" />

        <RadioButton
            android:id="@+id/radio_button2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:button="@null"
            android:fontFamily="@font/catamaran_medium"
            android:freezesText="true"
            android:gravity="center"
            android:text="@string/radio_button"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp" />

        <RadioButton
            android:id="@+id/radio_button3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:button="@null"
            android:fontFamily="@font/catamaran_medium"
            android:freezesText="true"
            android:gravity="center"
            android:text="@string/radio_button"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp" />

        <RadioButton
            android:id="@+id/radio_button4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:button="@null"
            android:fontFamily="@font/catamaran_medium"
            android:freezesText="true"
            android:gravity="center"
            android:text="@string/radio_button"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_confirm_next"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_weight="1"
            android:background="@drawable/confirm_button_background"
            android:elevation="@dimen/_5sdp"
            android:fontFamily="@font/catamaran_medium"
            android:freezesText="true"
            android:gravity="center"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>








