<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewWannaDownload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="@dimen/_10sdp"
        app:cardBackgroundColor="#1B0B3E"
        app:cardCornerRadius="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/messageText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:fontFamily="@font/dosis_medium"
                android:gravity="center"
                android:text="@string/note"
                android:elevation="@dimen/_10sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_17sdp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/cancel_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:backgroundTint="@android:color/holo_red_dark"
                    android:drawableLeft="@drawable/ic_close"
                    android:elevation="@dimen/_10sdp"
                    android:text="@string/no"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:cornerRadius="@dimen/_15sdp"
                    tools:ignore="RtlHardcoded" />

                <Button
                    android:id="@+id/ok_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:backgroundTint="#00682B"
                    android:drawableLeft="@drawable/ic_yes"
                    android:elevation="@dimen/_10sdp"
                    android:text="@string/yes"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    app:cornerRadius="@dimen/_15sdp"
                    tools:ignore="RtlHardcoded" />

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>